--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,16 @@
     <script src='/app/app.module.js' ></script>
     <script src='/app/app.config.js' ></script>
 
+    <script src='/app/core/post/post.module.js' ></script>
+    <script src='/app/core/post/post.service.js' ></script>
+
     <script src='/app/blog-detail/blog-detail.module.js' ></script>
     <script src='/app/blog-detail/blog-detail.component.js' ></script>
     <script src='/app/blog-list/blog-list.module.js' ></script>
     <script src='/app/blog-list/blog-list.component.js' ></script>
+
+    <script src='/app/utils/confirm-click/confirm-click.module.js' ></script>
+    <script src='/app/utils/confirm-click/confirm-click.directive.js' ></script>
   </head>
   <body>
     <h1>Nav</h1>
