25-confirm delete, 26-bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
     <script src='/app/utils/confirm-click/confirm-click.directive.js' ></script>
   </head>
   <body>
-    <h1>Nav</h1>
-    <div ng-view></div>
+    <nav class="container">
+      <h1>Nav</h1>
+    </nav>
+    <div class="container" ng-view></div>
   </body>
 </html>
