--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script src='/node_modules/angular/angular.min.js' ></script>
     <script src='/node_modules/angular-resource/angular-resource.min.js' ></script>
     <script src='/node_modules/angular-route/angular-route.min.js' ></script>
+    <script src='/node_modules/angular-utils-pagination/dirPagination.js' ></script>
 
     <script src='/app/app.module.js' ></script>
     <script src='/app/app.config.js' ></script>
